# tmdb_ex_project

./: .gitignore  pyproject.toml  pytest.ini  ruff.toml
app/: bad_movie_ids  ex_redis.py  main.py  prototype.ipynb
app/core/: config.py
app/core/database/: sqla_base.py  sqla_connection_models.py  sqla_utils.py
app/core/env_files/: api.env.example  db.env.example
app/lib/: constants.py
app/tests/: test_tmdb.py
app/tests/cassettes/: test_api_auth.yaml
app/utils/: file_utils.py  logger.py  msgpack_utils.py  time_utils.py  tmdb_utils.py  uuid_utils.py
containers/db/redis/: .env.example  docker-compose.yml  generate_redis_pass.sh
vcr_diskcache_test/: bad_movie_ids  main.py  prototype.ipynb
vcr_diskcache_test/core/: db.py
vcr_diskcache_test/core/env_files/: .env.example
vcr_diskcache_test/domain/schemas/tmdb/: tmdb_media_schemas.py  tmdb_responses.py
vcr_diskcache_test/examples/responses/: ex_movie_response.json  ex_tvshow_response.json
vcr_diskcache_test/tests/: __init__.py
vcr_diskcache_test/tests/cassettes/: test_fail_api_auth.yaml  test_retrieve_api_token.yaml
vcr_diskcache_test/utils/: logger.py  msgpack_utils.py  request_utils.py
